After all these years, a bug fix. Also, admin email is in ini file, and copyright updated.
git-svn-id: svn://192.168.1.10/public/CoffeeWebServer@23890 0d6f1817-ed0e-0410-87c9-987e46238f29